# bunny-dns-sync

./: .gitignore  README.md  pyproject.toml
bunny_dns/: dns_manager.py  sync.py
tests/: test_sync.py
