[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bunny-dns-sync"
version = "0.1.0"
description = "Declaratively manage DNS zones, Pull Zones, and Edge Rules on bunny.net"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aleš Kancilija" }
]
keywords = ["bunny", "bunnynet", "dns", "cdn", "pullzone", "edge-rules", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mrpesho/bunny-dns-sync"
Repository = "https://github.com/mrpesho/bunny-dns-sync"
Issues = "https://github.com/mrpesho/bunny-dns-sync/issues"

[project.scripts]
bunny-dns = "bunny_dns.main:main"
bunny-dns-check = "bunny_dns.check_propagation:main"
